Fixed word-break in _mdtable.scss Cleaning mess in list.html

--- a/src/main/resources/static/css/_mdtable.scss
+++ b/src/main/resources/static/css/_mdtable.scss
@@ -14,7 +14,7 @@ table.mdtable {
         background-color: $mdtableRowBackgroundColor;
         > td {
           overflow-wrap: break-word;
-          word-break: break-all;
+          word-break: keep-all;
           padding-top: 8px;
           padding-bottom: 8px;
           padding-left: 10px;
