--- a/src/main/resources/static/css/css.css
+++ b/src/main/resources/static/css/css.css
@@ -50,7 +50,7 @@ table.mdtable.striped > tbody > tr {
     background-color: #2a363d; }
   table.mdtable.striped > tbody > tr > td {
     overflow-wrap: break-word;
-    word-break: break-all;
+    word-break: keep-all;
     padding-top: 8px;
     padding-bottom: 8px;
     padding-left: 10px;
